--- a/django-app/djangoproject/templates/game/delete_story_confirm.html
+++ b/django-app/djangoproject/templates/game/delete_story_confirm.html
@@ -17,9 +17,9 @@
             {{ story.description|default:"No description"|truncatewords:50 }}
         </p>
         
-        {% if story.tags %}
+        {% if story.tags_list %}
             <div style="margin-top: 1rem;">
-                {% for tag in story.tags %}
+                {% for tag in story.tags_list %}
                     <span class="badge" style="background: #e3f2fd; color: #1976d2; margin-right: 0.25rem;">
                         {{ tag }}
                     </span>
