--- a/django-app/djangoproject/templates/game/create_page.html
+++ b/django-app/djangoproject/templates/game/create_page.html
@@ -28,7 +28,7 @@
         </div>
         
         <div class="form-group" id="ending-label-group" style="display: none;">
-            <label for="ending_label">Ending Label (Level 13):</label>
+            <label for="ending_label">Ending Label:</label>
             <input type="text" id="ending_label" name="ending_label" placeholder="e.g., Victory, Defeat, Discovery">
             <small style="display: block; margin-top: 0.5rem; color: #666;">
                 Give this ending a memorable name.
