--- a/django-app/djangoproject/templates/game/my_stories.html
+++ b/django-app/djangoproject/templates/game/my_stories.html
@@ -39,7 +39,7 @@
                         </div>
                         <div>
                             <strong>🏷️ Tags:</strong> 
-                            {% if story.tags %}{{ story.tags|length }}{% else %}0{% endif %}
+                            {% if story.tags_list %}{{ story.tags_list|length }}{% else %}0{% endif %}
                         </div>
                     </div>
                 </div>
